--- a/Resources/Private/Templates/Default.html
+++ b/Resources/Private/Templates/Default.html
@@ -5,10 +5,10 @@
     <f:section name="Main">
         <f:debug>{_all}</f:debug>
         <f:if condition="{lib.pagecss !== ''}">
-            <f:asset.css identifier="modalCSS" href="{f:cObject(typoscriptObjectPath: 'lib.pagecss')}" />
+            <f:asset.css identifier="video23CSS" href="{f:cObject(typoscriptObjectPath: 'lib.pagecss')}" />
         </f:if>
         <f:if condition="{lib.pagejs !== ''}">
-            <f:asset.script identifier="modalJs" src="{f:cObject(typoscriptObjectPath: 'lib.pagejs')}" />
+            <f:asset.script identifier="video23Js" src="{f:cObject(typoscriptObjectPath: 'lib.pagejs')}" />
         </f:if>
     </f:section>
 </f:spaceless>
