--- a/Resources/Private/Templates/Default.html
+++ b/Resources/Private/Templates/Default.html
@@ -4,11 +4,11 @@
 <f:spaceless>
     <f:section name="Main">
         <f:debug>{_all}</f:debug>
-        <f:if condition="{lib.pagecss !== ''}">
-            <f:asset.css identifier="video23CSS" href="{f:cObject(typoscriptObjectPath: 'lib.pagecss')}" />
+        <f:if condition="{lib.video23.pagecss !== ''}">
+            <f:asset.css identifier="video23CSS" href="{f:cObject(typoscriptObjectPath: 'lib.video23.pagecss')}" />
         </f:if>
-        <f:if condition="{lib.pagejs !== ''}">
-            <f:asset.script identifier="video23Js" src="{f:cObject(typoscriptObjectPath: 'lib.pagejs')}" />
+        <f:if condition="{lib.video23.pagejs !== ''}">
+            <f:asset.script identifier="video23Js" src="{f:cObject(typoscriptObjectPath: 'lib.video23.pagejs')}" />
         </f:if>
     </f:section>
 </f:spaceless>
