--- a/Resources/Private/Templates/Player.html
+++ b/Resources/Private/Templates/Player.html
@@ -10,12 +10,10 @@
             </f:if>
             <div class="ku-video-player">
                 <video>
-                    <source src="" type="video/mp4">
+                    <source src="https://video.ku.dk/64968558/79383391/054c4586e6fc21974075cb68206d8c21/video_hd/morten-meldal-nobel-prize-2022-8-video.mp4" type="video/mp4">
                 </video>
-                <button type="button" aria-lavel="" class="">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-btn-fill" viewBox="0 0 16 16">
-                        <path d="M0 12V4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm6.79-6.907A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"/>
-                      </svg>
+                <button type="button" aria-lavel="" class="bi bi-play-btn-fill btn-video-player">
+
                 </button>
             </div>
         </div>
