--- a/Resources/Private/Templates/Player.html
+++ b/Resources/Private/Templates/Player.html
@@ -12,8 +12,10 @@
                 <video>
                     <source src="https://video.ku.dk/64968558/79383391/054c4586e6fc21974075cb68206d8c21/video_hd/morten-meldal-nobel-prize-2022-8-video.mp4" type="video/mp4">
                 </video>
-                <button type="button" aria-lavel="" class="bi bi-play-btn-fill btn-video-player">
-
+                <button type="button" class="btn-video-player">
+                    <f:image src="EXT:ku_video23/Resources/Public/Images/playbutton.png" />
+                    <span class="visually-hidden">
+                        <f:translate key="LLL:EXT:ku_video23/Resources/Private/Language/locallang.xlf:play" /></span>
                 </button>
             </div>
         </div>
